--- a/pomelo/Base.lproj/Main.storyboard
+++ b/pomelo/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChannelListCell" id="iwV-Cu-zGf" customClass="ChannelListCellTableViewCell" customModule="pomelo" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChannelListCell" id="iwV-Cu-zGf" customClass="ChannelListCell" customModule="pomelo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iwV-Cu-zGf" id="zk5-vP-ES3">
@@ -238,6 +238,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="5yu-kT-U8a"/>
+        <segue reference="Kbo-1M-svy"/>
     </inferredMetricsTieBreakers>
 </document>
